--- a/templates/redis.service.j2
+++ b/templates/redis.service.j2
@@ -3,12 +3,12 @@ Description=Redis persistent key-value database
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/redis-server {{redis_conf_file_location}}/redis.conf --supervised systemd
-ExecStop=/bin/redis-cli -h {{ redis_bind }} -p 7000 shutdown
+ExecStart=/usr/local/bin/redis-server {{ redis_conf_file_location }}/redis.conf --supervised systemd
+ExecStop=/bin/redis-cli shutdown
 Type=notify
 User=redis
 Group=redis
-RuntimeDirectory={{redis_runtime_directory}}
+RuntimeDirectory={{ redis_runtime_directory }}
 RuntimeDirectoryMode=0755
 LimitNOFILE=65535
 
