--- a/roles/redis-cluster/templates/redis.conf.j2
+++ b/roles/redis-cluster/templates/redis.conf.j2
@@ -33,7 +33,7 @@ stop-writes-on-bgsave-error {{ redis_stop_writes_on_bgsave_error|string }}
 rdbcompression {{ redis_rdbcompression|string }}
 rdbchecksum {{ redis_rdbchecksum|string }}
 dbfilename {{ redis_db_filename|string }}
-dir {{ redis_dir }}
+dir {{ redis_data_dir }}
 
 # Disable Redis commands
 {% for disable_command in disable_commands %}
