Added ansible role for sentinel
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/sentinel/templates/sentinel.conf.j2
+++ b/roles/sentinel/templates/sentinel.conf.j2
@@ -1,7 +1,7 @@
 #SENTINEL BASIC CONFIGURATION
 port {{ redis_sentinel_port }}
 
-sentinel monitor {{ sentinel_master_name }} groups.leader[0] {{ redis_leader_port }} {{ quorum_count }}
+sentinel monitor {{ sentinel_master_name }} {{ groups.leader[0] }} {{ redis_leader_port }} {{ quorum_count }}
 sentinel auth-pass {{ sentinel_master_name }} {{ redis_password }}
 
 sentinel down-after-milliseconds {{ sentinel_master_name }} {{ down_after_milliseconds }}
