--- a/playbooks/node.json.j2
+++ b/playbooks/node.json.j2
@@ -1,5 +1,5 @@
 {
-    "removenode" : "{{ command_result.stdout_lines | select('search', ansible_ssh_host + ':' + redis_port|string) }}",
+    "removenode" : "{{ remove_node_id.stdout }}",
     "presentnode" : "{{ transfer_node_id.stdout }}"
 }
 
